--- a/views/index.html
+++ b/views/index.html
@@ -24,6 +24,14 @@
     }
 
     google.maps.event.addDomListener(window, 'load', initMap);
+
+    var getMapBoundaries = function(){
+      var bounds = map.getBounds();
+      return {
+        ne: '' + bounds.getNorthEast().lat() + ',' + bounds.getNorthEast().lng(),
+        sw: '' + bounds.getSouthWest().lat() + ',' + bounds.getSouthWest().lng()
+      }
+    }
   </script>
 </body>
 </html>
