--- a/views/index.html
+++ b/views/index.html
@@ -3,37 +3,7 @@
 <head>
   <title>Four Alarm</title>
   <meta name="viewport" content="initial-scale:1.0, user-scalable=no" />
-  <style>
-    html{ height: 100%;}
-    body{ height: 100%; margin: 0; padding: 0; font-family: Avenir, 'Helvetica Neue', Helvetica, Arial, sans-serf;}
-    #map{ height: 100%; }
-    #visualization-controls{
-      background-color: rgba(255, 255, 255, 0.8);
-      left: 100px;
-      padding: 0 15px 10px;
-      position: absolute;
-      top: 0;
-    }
-    #visualization-controls input{
-      width: 300px;
-    }
-    #visualization-controls label, #visualization-controls input{
-      display: block;
-    }
-    #visualization-controls label{
-      color: #444;
-      font-size: 14px;
-      padding: 8px 0 2px;
-    }
-    .loading{
-      opacity: 0;
-      position: absolute;
-      right: 6px;
-      top: 33px;
-      -webkit-transition: opacity 250ms ease-in;
-      width: 40px;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div id="map"></div>
